x86:signal: Fix Unity and other 64-bit games crashing
x86:kernel: Replace cpu_has_xsave with boot_cpu_has() usage

Signed-off-by: GuneetAtwal <guneetatwal@gmail.com>

Revert "x86/signal/64: Add a comment about sigcontext->fs and gs"

This reverts commit e54fdcc.

Signed-off-by: GuneetAtwal <guneetatwal@gmail.com>

Revert "x86/signal/64: Re-add support for SS in the 64-bit signal context"

This reverts commit 6c25da5.

Signed-off-by: GuneetAtwal <guneetatwal@gmail.com>

Revert "x86/signal/64: Fix SS if needed when delivering a 64-bit signal"

This reverts commit 8ff5bd2.

Signed-off-by: GuneetAtwal <guneetatwal@gmail.com>

--- a/arch/x86/configs/android-x86_64_defconfig
+++ b/arch/x86/configs/android-x86_64_defconfig
@@ -1656,6 +1656,7 @@ CONFIG_USB_SWITCH_FSA9480=m
 # CONFIG_SRAM is not set
 # CONFIG_PCI_ENDPOINT_TEST is not set
 CONFIG_UID_SYS_STATS=y
+# CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
 CONFIG_C2PORT=m
 CONFIG_C2PORT_DURAMAR_2150=m
@@ -6648,7 +6649,7 @@ CONFIG_APDS9960=m
 CONFIG_BH1750=m
 CONFIG_BH1780=m
 CONFIG_CM32181=m
-CONFIG_CM3218X=y
+CONFIG_CM3218X=m
 CONFIG_CM3232=m
 CONFIG_CM3323=m
 # CONFIG_CM3605 is not set
