--- a/arch/x86/configs/android-x86_64_defconfig
+++ b/arch/x86/configs/android-x86_64_defconfig
@@ -121,6 +121,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
+# CONFIG_SCHED_WALT is not set
 CONFIG_BSD_PROCESS_ACCT=y
 # CONFIG_BSD_PROCESS_ACCT_V3 is not set
 CONFIG_TASKSTATS=y
@@ -167,7 +168,7 @@ CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_BPF=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
@@ -175,6 +176,8 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 # CONFIG_NET_NS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_SCHED_TUNE=y
+# CONFIG_DEFAULT_USE_ENERGY_AWARE is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -241,7 +244,7 @@ CONFIG_SLAB=y
 # CONFIG_SLOB is not set
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
-CONFIG_SYSTEM_DATA_VERIFICATION=y
+# CONFIG_SYSTEM_DATA_VERIFICATION is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 CONFIG_CRASH_CORE=y
@@ -261,7 +264,7 @@ CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_OPTPROBES=y
 CONFIG_HAVE_KPROBES_ON_FTRACE=y
-CONFIG_HAVE_FUNCTION_ERROR_INJECTION=y
+# CONFIG_HAVE_FUNCTION_ERROR_INJECTION is not set
 CONFIG_HAVE_NMI=y
 CONFIG_HAVE_ARCH_TRACEHOOK=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
@@ -563,7 +566,7 @@ CONFIG_FRONTSWAP=y
 # CONFIG_ZBUD is not set
 # CONFIG_ZSMALLOC is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
-# CONFIG_DEFERRED_STRUCT_PAGE_INIT is not set
+CONFIG_DEFERRED_STRUCT_PAGE_INIT=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 CONFIG_ARCH_HAS_ZONE_DEVICE=y
 CONFIG_FRAME_VECTOR=y
@@ -933,6 +936,7 @@ CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_SEG6_LWTUNNEL is not set
 # CONFIG_IPV6_SEG6_HMAC is not set
 # CONFIG_NETLABEL is not set
+CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NETWORK_SECMARK=y
 CONFIG_NET_PTP_CLASSIFY=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
@@ -1064,6 +1068,8 @@ CONFIG_NETFILTER_XT_MATCH_POLICY=y
 # CONFIG_NETFILTER_XT_MATCH_PHYSDEV is not set
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
+CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
+CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 # CONFIG_NETFILTER_XT_MATCH_RECENT is not set
@@ -1369,6 +1375,7 @@ CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 CONFIG_WIMAX=m
 CONFIG_WIMAX_DEBUG_LEVEL=8
 CONFIG_RFKILL=y
+CONFIG_RFKILL_PM=y
 CONFIG_RFKILL_LEDS=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
@@ -1647,7 +1654,10 @@ CONFIG_USB_SWITCH_FSA9480=m
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 # CONFIG_PCI_ENDPOINT_TEST is not set
-# CONFIG_MISC_RTSX is not set
+CONFIG_MISC_RTSX=y
+CONFIG_UID_SYS_STATS=y
+# CONFIG_UID_SYS_STATS_DEBUG is not set
+CONFIG_MEMORY_STATE_TIME=y
 CONFIG_C2PORT=m
 CONFIG_C2PORT_DURAMAR_2150=m
 
@@ -1720,8 +1730,8 @@ CONFIG_ECHO=m
 # CONFIG_CXL_AFU_DRIVER_OPS is not set
 # CONFIG_CXL_LIB is not set
 # CONFIG_OCXL_BASE is not set
-# CONFIG_MISC_RTSX_PCI is not set
-# CONFIG_MISC_RTSX_USB is not set
+CONFIG_MISC_RTSX_PCI=y
+CONFIG_MISC_RTSX_USB=y
 CONFIG_HAVE_IDE=y
 CONFIG_IDE=m
 
@@ -2000,6 +2010,8 @@ CONFIG_DM_CRYPT=y
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128 is not set
+CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=1
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
@@ -2739,6 +2751,8 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 CONFIG_INPUT_JOYDEV=m
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
+CONFIG_INPUT_KEYRESET=y
+CONFIG_INPUT_KEYCOMBO=y
 
 #
 # Input Device Drivers
@@ -2950,6 +2964,7 @@ CONFIG_INPUT_GP2A=m
 # CONFIG_INPUT_GPIO_DECODER is not set
 CONFIG_INPUT_ATLAS_BTNS=m
 CONFIG_INPUT_ATI_REMOTE2=m
+CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_KEYSPAN_REMOTE=m
 CONFIG_INPUT_KXTJ9=m
 # CONFIG_INPUT_KXTJ9_POLLED_MODE is not set
@@ -2960,6 +2975,7 @@ CONFIG_INPUT_REGULATOR_HAPTIC=m
 CONFIG_INPUT_TPS65218_PWRBUTTON=m
 CONFIG_INPUT_AXP20X_PEK=m
 CONFIG_INPUT_UINPUT=y
+CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_PCF8574=m
 # CONFIG_INPUT_PWM_BEEPER is not set
 # CONFIG_INPUT_PWM_VIBRA is not set
@@ -3393,7 +3409,7 @@ CONFIG_GPIO_VIPERBOARD=m
 CONFIG_POWER_AVS=y
 # CONFIG_POWER_RESET is not set
 CONFIG_POWER_SUPPLY=y
-CONFIG_POWER_SUPPLY_DEBUG=y
+# CONFIG_POWER_SUPPLY_DEBUG is not set
 CONFIG_PDA_POWER=y
 # CONFIG_GENERIC_ADC_BATTERY is not set
 # CONFIG_TEST_POWER is not set
@@ -3781,7 +3797,9 @@ CONFIG_MFD_VIPERBOARD=m
 # CONFIG_MFD_PCF50633 is not set
 CONFIG_UCB1400_CORE=m
 CONFIG_MFD_RDC321X=m
+CONFIG_MFD_RTSX_PCI=m
 # CONFIG_MFD_RT5033 is not set
+CONFIG_MFD_RTSX_USB=m
 # CONFIG_MFD_RC5T583 is not set
 # CONFIG_MFD_RK808 is not set
 CONFIG_MFD_RN5T618=m
@@ -3887,7 +3905,8 @@ CONFIG_REGULATOR_TPS62360=m
 # CONFIG_REGULATOR_VCTRL is not set
 CONFIG_RC_CORE=y
 CONFIG_RC_MAP=m
-# CONFIG_LIRC is not set
+CONFIG_LIRC=m
+CONFIG_IR_LIRC_CODEC=m
 CONFIG_RC_DECODERS=y
 CONFIG_IR_NEC_DECODER=m
 CONFIG_IR_RC5_DECODER=m
@@ -5110,7 +5129,8 @@ CONFIG_SND_SOC_INTEL_SST=m
 CONFIG_SND_SOC_INTEL_SST_FIRMWARE=m
 CONFIG_SND_SOC_INTEL_HASWELL=m
 # CONFIG_SND_SOC_INTEL_BAYTRAIL is not set
-# CONFIG_SND_SST_ATOM_HIFI2_PLATFORM_PCI is not set
+CONFIG_SND_SST_ATOM_HIFI2_PLATFORM_PCI is not set
+CONFIG_SND_SST_ATOM_HIFI2_PLATFORM_ACPI=m
 CONFIG_SND_SST_ATOM_HIFI2_PLATFORM=m
 CONFIG_SND_SOC_INTEL_SKYLAKE_SSP_CLK=m
 CONFIG_SND_SOC_INTEL_SKYLAKE=m
@@ -5627,9 +5647,11 @@ CONFIG_USB_EZUSB_FX2=m
 # USB Physical Layer drivers
 #
 CONFIG_USB_PHY=y
+# CONFIG_USB_OTG_WAKELOCK is not set
 CONFIG_NOP_USB_XCEIV=m
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ISP1301 is not set
+# CONFIG_DUAL_ROLE_USB_INTF is not set
 CONFIG_USB_GADGET=m
 # CONFIG_USB_GADGET_DEBUG is not set
 CONFIG_USB_GADGET_DEBUG_FILES=y
@@ -5688,6 +5710,8 @@ CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=8
 CONFIG_SDIO_UART=m
 # CONFIG_MMC_TEST is not set
+# CONFIG_MMC_EMBEDDED_SDIO is not set
+# CONFIG_MMC_PARANOID_SD_INIT is not set
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -6120,15 +6144,15 @@ CONFIG_FB_XGI=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_INTEL_ATOMISP=y
 CONFIG_VIDEO_ATOMISP=m
-# CONFIG_VIDEO_ATOMISP_OV5693 is not set
-# CONFIG_VIDEO_ATOMISP_OV2722 is not set
-# CONFIG_VIDEO_ATOMISP_GC2235 is not set
-# CONFIG_VIDEO_ATOMISP_OV8858 is not set
-# CONFIG_VIDEO_ATOMISP_MSRLIST_HELPER is not set
-# CONFIG_VIDEO_ATOMISP_MT9M114 is not set
-# CONFIG_VIDEO_ATOMISP_GC0310 is not set
-# CONFIG_VIDEO_ATOMISP_OV2680 is not set
-# CONFIG_VIDEO_ATOMISP_LM3554 is not set
+# CONFIG_VIDEO_ATOMISP_OV5693=m
+# CONFIG_VIDEO_ATOMISP_OV2722=m
+# CONFIG_VIDEO_ATOMISP_GC2235=m
+# CONFIG_VIDEO_ATOMISP_OV8858=m
+# CONFIG_VIDEO_ATOMISP_MSRLIST_HELPER=m
+# CONFIG_VIDEO_ATOMISP_MT9M114=m
+# CONFIG_VIDEO_ATOMISP_GC0310=m
+# CONFIG_VIDEO_ATOMISP_OV2680=m
+# CONFIG_VIDEO_ATOMISP_LM3554=m
 # CONFIG_I2C_BCM2048 is not set
 CONFIG_DVB_CXD2099=m
 
@@ -6136,7 +6160,9 @@ CONFIG_DVB_CXD2099=m
 # Android
 #
 CONFIG_ASHMEM=y
+# CONFIG_ANDROID_VSOC is not set
 # CONFIG_ION is not set
+# CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_MTD_SPINAND_MT29F is not set
@@ -6608,6 +6634,7 @@ CONFIG_APDS9960=m
 CONFIG_BH1750=m
 CONFIG_BH1780=m
 CONFIG_CM32181=m
+CONFIG_CM3218X=y
 CONFIG_CM3232=m
 CONFIG_CM3323=m
 # CONFIG_CM3605 is not set
@@ -6981,6 +7008,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 # CONFIG_ECRYPT_FS is not set
+CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -6990,8 +7018,6 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_UBIFS_FS is not set
 # CONFIG_CRAMFS is not set
 CONFIG_SQUASHFS=y
-CONFIG_SQUASHFS_FILE_CACHE=y
-# CONFIG_SQUASHFS_FILE_DIRECT is not set
 # CONFIG_SQUASHFS_DECOMP_SINGLE is not set
 # CONFIG_SQUASHFS_DECOMP_MULTI is not set
 CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
@@ -7354,20 +7380,20 @@ CONFIG_UNWINDER_ORC=y
 #
 # Security options
 #
-CONFIG_KEYS=y
-CONFIG_KEYS_COMPAT=y
+# CONFIG_KEYS is not set
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
 # CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEY_DH_OPERATIONS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
+CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_WRITABLE_HOOKS=y
 # CONFIG_SECURITYFS is not set
 CONFIG_SECURITY_NETWORK=y
 # CONFIG_PAGE_TABLE_ISOLATION is not set
 # CONFIG_SECURITY_NETWORK_XFRM is not set
-CONFIG_SECURITY_PATH=y
+# CONFIG_SECURITY_PATH is not set
 CONFIG_LSM_MMAP_MIN_ADDR=65536
 CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HARDENED_USERCOPY=y
@@ -7376,8 +7402,7 @@ CONFIG_HARDENED_USERCOPY_FALLBACK=y
 # CONFIG_FORTIFY_SOURCE is not set
 # CONFIG_STATIC_USERMODEHELPER is not set
 CONFIG_SECURITY_SELINUX=y
-CONFIG_SECURITY_SELINUX_BOOTPARAM=y
-CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=1
+# CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 CONFIG_SECURITY_SELINUX_DISABLE=y
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
@@ -7392,9 +7417,9 @@ CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_DEFAULT_SECURITY_SELINUX=y
-# CONFIG_DEFAULT_SECURITY_DAC is not set
-CONFIG_DEFAULT_SECURITY="selinux"
+# CONFIG_DEFAULT_SECURITY_SELINUX is not set
+CONFIG_DEFAULT_SECURITY_DAC=y
+CONFIG_DEFAULT_SECURITY=""
 CONFIG_XOR_BLOCKS=m
 CONFIG_CRYPTO=y
 
@@ -7534,6 +7559,7 @@ CONFIG_CRYPTO_SERPENT=m
 CONFIG_CRYPTO_SERPENT_SSE2_X86_64=m
 CONFIG_CRYPTO_SERPENT_AVX_X86_64=m
 CONFIG_CRYPTO_SERPENT_AVX2_X86_64=m
+# CONFIG_CRYPTO_SPECK is not set
 CONFIG_CRYPTO_TEA=m
 CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_TWOFISH_COMMON=m
@@ -7672,7 +7698,7 @@ CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT_MAP=y
 CONFIG_HAS_DMA=y
 CONFIG_SGL_ALLOC=y
-# CONFIG_DMA_DIRECT_OPS is not set
+CONFIG_DMA_DIRECT_OPS=y
 # CONFIG_DMA_VIRT_OPS is not set
 CONFIG_CHECK_SIGNATURE=y
 CONFIG_CPU_RMAP=y
